--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
@@ -26,7 +27,7 @@ jobs:
       - name: Create Dockerfile
         run: |
           cat << EOF > Dockerfile
-          FROM postgres:15
+          FROM --platform=\$BUILDPLATFORM postgres:15
           
           RUN apt-get update && apt-get install -y wget
           
@@ -72,6 +73,9 @@ jobs:
 
       - uses: docker/build-push-action@v6
         with:
+          platforms: linux/amd64,linux/arm64
           context: .
           push: true
-          tags: ${{ env.DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ steps.date.outputs.yesterday }}
+          tags: |
+            ${{ env.DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ steps.date.outputs.yesterday }}
+            ${{ env.DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
