--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -24,7 +24,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile
+          file: ./schema_image/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
